--- a/Exercice7/style.css
+++ b/Exercice7/style.css
@@ -51,3 +51,17 @@ section {
     margin-bottom: 20px;
 }
 
+@media (max-width: 768px) {
+    h1 {
+        font-size: 20px;
+    }
+
+    nav ul {
+        flex-direction: column;
+        align-content: center;
+    }
+
+    nav ul li:first {
+        margin-right: 0px;
+    }
+}
